--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -42,6 +42,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Length of 'SN' column of datframe data\n",
+    "Total_players=len(purchase_data['SN'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -64,7 +74,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Total Players</th>\n",
+       "      <th>Total_players</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -77,16 +87,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   Total Players\n",
+       "   Total_players\n",
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Create a dataframe of 'SN' length\n",
+    "pd_Total_players = pd.DataFrame({'Total_players':[Total_players]})\n",
+    "pd_Total_players "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,10 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unique values for 'Item ID'\n",
+    "unique_items= len((purchase_data['Item ID']).unique())\n",
+    "# Calulate average price of pricing data\n",
+    "Average_price = purchase_data[\"Price\"].mean()\n",
+    "#unique value for 'Purchase ID'\n",
+    "Number_purchases = len(purchase_data[\"Purchase ID\"].value_counts())\n",
+    "#Sum of Price column total\n",
+    "Total_revenue = purchase_data[\"Price\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,7 +167,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Number of Unique Items</th>\n",
+       "      <th>Unique Items</th>\n",
        "      <th>Average Price</th>\n",
        "      <th>Number of Purchases</th>\n",
        "      <th>Total Revenue</th>\n",
@@ -151,23 +179,30 @@
        "      <td>179</td>\n",
        "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
+       "      <td>$2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     179         $3.05                 780     $2,379.77"
+       "   Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0           179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "summary_table = pd.DataFrame({'Unique Items':[unique_items],'Average Price': [Average_price],'Number of Purchases':[Number_purchases],'Total Revenue':[Total_revenue]})\n",
+    "#Format currency style for Average Price\n",
+    "summary_table['Average Price']=summary_table['Average Price'].map(\"${:.2f}\".format)\n",
+    "#Format currency style for Total sum revenue\n",
+    "summary_table['Total Revenue']=summary_table['Total Revenue'].map(\"${:.2f}\".format)\n",
+    "summary_table"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1061,7 +1096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
