rest of attempt

--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -228,7 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by Gender\n",
+    "purchase_gender = purchase_data.groupby('Gender')\n",
+    "#Unique 'SN'values\n",
+    "gender_count= purchase_gender.nunique()['SN']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate total percentage of gender and SN values\n",
+    "percentage_count = (gender_count/Total_players) *100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,19 +275,24 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
+       "      <th>Percentage of Player</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>484</td>\n",
-       "      <td>84.03%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>81</td>\n",
        "      <td>14.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
@@ -277,18 +304,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count Percentage of Players\n",
-       "Male                           484                84.03%\n",
-       "Female                          81                14.06%\n",
-       "Other / Non-Disclosed           11                 1.91%"
+       "                       Total Count Percentage of Player\n",
+       "Gender                                                 \n",
+       "Female                          81               14.06%\n",
+       "Male                           484               84.03%\n",
+       "Other / Non-Disclosed           11                1.91%"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Place values into a dataframe\n",
+    "Gender_table = pd.DataFrame({'Total Count':gender_count,'Percentage of Player':percentage_count})\n",
+    "#Format two decimal places and percentage stlye\n",
+    "Gender_table['Percentage of Player']=Gender_table['Percentage of Player'].map(\"{:.2f}%\".format)\n",
+    "Gender_table"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -318,7 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by Gender and Price, place a count\n",
+    "gender_price =purchase_data.groupby(['Gender'])['Price'].count()\n",
+    "#Group by Gender and price average\n",
+    "gender_average = purchase_data.groupby(['Gender'])['Price'].mean()\n",
+    "#Group by Gender and Price sum\n",
+    "gender_total = purchase_data.groupby(['Gender'])['Price'].sum()\n",
+    "#average per person\n",
+    "average_person = gender_total/gender_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -342,9 +392,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
+       "      <th>Purchase</th>\n",
        "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
+       "      <th>Total Purchase per Purchase</th>\n",
        "      <th>Avg Total Purchase per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -382,25 +432,42 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase  Average Purchase Price  \\\n",
+       "Gender                                                    \n",
+       "Female                      113                   $3.20   \n",
+       "Male                        652                   $3.02   \n",
+       "Other / Non-Disclosed        15                   $3.35   \n",
        "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
+       "                       Total Purchase per Purchase  \\\n",
+       "Gender                                               \n",
+       "Female                                     $361.94   \n",
+       "Male                                     $1,967.64   \n",
+       "Other / Non-Disclosed                       $50.19   \n",
+       "\n",
+       "                       Avg Total Purchase per Person  \n",
+       "Gender                                                \n",
+       "Female                                         $4.47  \n",
+       "Male                                           $4.07  \n",
+       "Other / Non-Disclosed                          $4.56  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Place values into a dataframe\n",
+    "purchase_analysis = pd.DataFrame({'Purchase':gender_price,\n",
+    "                                  'Average Purchase Price':gender_average,\n",
+    "                                  'Total Purchase per Purchase':gender_total,\n",
+    "                                 'Avg Total Purchase per Person':average_person})\n",
+    "#format 2 decimal place\n",
+    "pd.options.display.float_format= \"${:,.2f}\".format\n",
+    "purchase_analysis\n",
+    "\n",
+    "#Resource:https://www.kite.com/python/answers/how-to-display-float-values-in-a-pandas-dataframe-to-two-decimal-places-in-python#:~:text=Use%20pandas.&text=float_format%20to%20%22%7B%3A%2C.,values%20to%20two%20decimal%20places."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -433,7 +500,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Retrieve the max of the data by Age\n",
+    "purchase_data['Age'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Retrieve the min of the data by Age\n",
+    "purchase_data['Age'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seperate age groups into bins \n",
+    "bins=[0, 9, 14, 19, 24, 29, 34, 39, 99]\n",
+    "#give label values to bins\n",
+    "group_age=['<10','10-14','15-19','20-24','25-29','30-34','35-39','40+']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Ages</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>$1.56</td>\n",
+       "      <td>40+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>$4.88</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>$3.27</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>$1.44</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price   Ages  \n",
+       "0  Extraction, Quickblade Of Trembling Hands  $3.53  20-24  \n",
+       "1                          Frenzied Scimitar  $1.56    40+  \n",
+       "2                               Final Critic  $4.88  20-24  \n",
+       "3                                Blindscythe  $3.27  20-24  \n",
+       "4                                       Fury  $1.44  20-24  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchase_data[\"Ages\"] = pd.cut(purchase_data[\"Age\"], bins, labels=group_age)\n",
+    "purchase_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by ages\n",
+    "age_count = purchase_data.groupby('Ages')\n",
+    "#unique values of 'SN' count\n",
+    "Purchase_count = age_count[\"SN\"].nunique()\n",
+    "#Calculate percent value of age bin category\n",
+    "percentage_count = (Purchase_count /Total_players)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate percent value of age bin category\n",
+    "percentage_count = (Purchase_count /Total_players)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -459,6 +726,11 @@
        "      <th></th>\n",
        "      <th>Total Count</th>\n",
        "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ages</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -507,23 +779,31 @@
        "</div>"
       ],
       "text/plain": [
-       "       Total Count Percentage of Players\n",
-       "<10             17                 2.95%\n",
-       "10-14           22                 3.82%\n",
-       "15-19          107                18.58%\n",
-       "20-24          258                44.79%\n",
-       "25-29           77                13.37%\n",
-       "30-34           52                 9.03%\n",
-       "35-39           31                 5.38%\n",
-       "40+             12                 2.08%"
+       "       Total Count  Percentage of Players\n",
+       "Ages                                     \n",
+       "<10             17                  2.95%\n",
+       "10-14           22                  3.82%\n",
+       "15-19          107                 18.58%\n",
+       "20-24          258                 44.79%\n",
+       "25-29           77                 13.37%\n",
+       "30-34           52                  9.03%\n",
+       "35-39           31                  5.38%\n",
+       "40+             12                  2.08%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#put into dataframe\n",
+    "Age_Demographics= pd.DataFrame({'Total Count':Purchase_count,\n",
+    "                                  'Percentage of Players':percentage_count})\n",
+    "#Format by two decimal places and percent\n",
+    "pd.options.display.float_format= \"{:,.2f}%\".format\n",
+    "Age_Demographics"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -553,7 +833,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate averages of price by age\n",
+    "Average_age = age_count['Price'].mean()\n",
+    "#Count total number of price by age \n",
+    "age_counting = age_count[\"Price\"].count()\n",
+    "#Calculate total sum of price by age\n",
+    "total_age=age_count['Price'].sum()\n",
+    "#Calculate average total purchase per person\n",
+    "purchase_person =total_age/Purchase_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +879,7 @@
        "      <th>Avg Total Purchase per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
+       "      <th>Ages</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -626,61 +922,43 @@
        "      <td>$293.00</td>\n",
        "      <td>$3.81</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>73</td>\n",
-       "      <td>$2.93</td>\n",
-       "      <td>$214.00</td>\n",
-       "      <td>$4.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>41</td>\n",
-       "      <td>$3.60</td>\n",
-       "      <td>$147.67</td>\n",
-       "      <td>$4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$2.94</td>\n",
-       "      <td>$38.24</td>\n",
-       "      <td>$3.19</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "Age Ranges                                                              \n",
-       "<10                    23                  $3.35               $77.13   \n",
-       "10-14                  28                  $2.96               $82.78   \n",
-       "15-19                 136                  $3.04              $412.89   \n",
-       "20-24                 365                  $3.05            $1,114.06   \n",
-       "25-29                 101                  $2.90              $293.00   \n",
-       "30-34                  73                  $2.93              $214.00   \n",
-       "35-39                  41                  $3.60              $147.67   \n",
-       "40+                    13                  $2.94               $38.24   \n",
+       "       Purchase Count  Average Purchase Price  Total Purchase Value  \\\n",
+       "Ages                                                                  \n",
+       "<10                23                   $3.35                $77.13   \n",
+       "10-14              28                   $2.96                $82.78   \n",
+       "15-19             136                   $3.04               $412.89   \n",
+       "20-24             365                   $3.05             $1,114.06   \n",
+       "25-29             101                   $2.90               $293.00   \n",
        "\n",
-       "           Avg Total Purchase per Person  \n",
-       "Age Ranges                                \n",
-       "<10                                $4.54  \n",
-       "10-14                              $3.76  \n",
-       "15-19                              $3.86  \n",
-       "20-24                              $4.32  \n",
-       "25-29                              $3.81  \n",
-       "30-34                              $4.12  \n",
-       "35-39                              $4.76  \n",
-       "40+                                $3.19  "
+       "       Avg Total Purchase per Person  \n",
+       "Ages                                  \n",
+       "<10                            $4.54  \n",
+       "10-14                          $3.76  \n",
+       "15-19                          $3.86  \n",
+       "20-24                          $4.32  \n",
+       "25-29                          $3.81  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#place into dataframe\n",
+    "summary_age = pd.DataFrame({'Purchase Count':age_counting,\n",
+    "                            'Average Purchase Price':Average_age,\n",
+    "                            'Total Purchase Value':total_age,\n",
+    "                            'Avg Total Purchase per Person':purchase_person})\n",
+    "#format into 2 decimal places and currency\n",
+    "pd.options.display.float_format= \"${:,.2f}\".format\n",
+    "summary_age.head()"
+   ]
   },
   {
    "cell_type": "markdown",
