final code attempt

--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "Other / Non-Disclosed                          $4.56  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "45"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "7"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "4                                       Fury  $1.44  20-24  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "40+             12                  2.08%"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
        "25-29                          $3.81  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Group by SN\n",
+    "sn_group = purchase_data.groupby('SN')\n",
+    "#count by price\n",
+    "purchase_count = sn_group['Price'].count()\n",
+    "#Calculate average by price\n",
+    "sn_avg = sn_group['Price'].mean()\n",
+    "#total price sum\n",
+    "total_sn = sn_group['Price'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spenders = pd.DataFrame({\"Purchase Count\":purchase_count,\n",
+    "                             \"Average Purchase Price\": sn_avg ,\n",
+    "                             \"Total Purchase Value\":total_sn })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1060,21 +1087,27 @@
        "</div>"
       ],
       "text/plain": [
-       "             Purchase Count Average Purchase Price Total Purchase Value\n",
-       "SN                                                                     \n",
-       "Lisosia93                 5                  $3.79               $18.96\n",
-       "Idastidru52               4                  $3.86               $15.45\n",
-       "Chamjask73                3                  $4.61               $13.83\n",
-       "Iral74                    4                  $3.40               $13.62\n",
-       "Iskadarya95               3                  $4.37               $13.10"
+       "             Purchase Count  Average Purchase Price  Total Purchase Value\n",
+       "SN                                                                       \n",
+       "Lisosia93                 5                   $3.79                $18.96\n",
+       "Idastidru52               4                   $3.86                $15.45\n",
+       "Chamjask73                3                   $4.61                $13.83\n",
+       "Iral74                    4                   $3.40                $13.62\n",
+       "Iskadarya95               3                   $4.37                $13.10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#sort values in descending order\n",
+    "asc_SN = spenders.sort_values(['Total Purchase Value'],ascending=False)\n",
+    "\n",
+    "asc_SN.head()\n",
+    "#resource: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1108,7 +1141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Retrieve Item ID,Item Name, and Item Price columns\n",
+    "ID_items = purchase_data[['Item ID','Item Name','Price']]\n",
+    "#Group by Item ID and Item Name\n",
+    "group_id = ID_items.groupby(['Item ID','Item Name'])\n",
+    "#resource: https://stackoverflow.com/questions/17679089/pandas-dataframe-groupby-two-columns-and-get-counts\n",
+    "\n",
+    "#calculations for purchase count, average item price, and total purchase value\n",
+    "count_id = group_id['Price'].count()\n",
+    "avg_id = group_id['Price'].mean()\n",
+    "total_id = group_id['Price'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1186,37 +1237,46 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "92      Final Critic                                             13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "132     Persuasion                                                9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                 9   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "132     Persuasion                                                 9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
        "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                      $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "132     Persuasion                                        $3.22   \n",
-       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "                                                      Item Price  \\\n",
+       "Item ID Item Name                                                  \n",
+       "92      Final Critic                                       $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm       $4.23   \n",
+       "145     Fiery Glass Crusader                               $4.58   \n",
+       "132     Persuasion                                         $3.22   \n",
+       "108     Extraction, Quickblade Of Trembling Hands          $3.53   \n",
        "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "132     Persuasion                                                 $28.99  \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "92      Final Critic                                                $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                $50.76  \n",
+       "145     Fiery Glass Crusader                                        $41.22  \n",
+       "132     Persuasion                                                  $28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                   $31.77  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Place into a dataframe\n",
+    "item_df = pd.DataFrame({'Purchase Count':count_id,\n",
+    "                        'Item Price':avg_id,\n",
+    "                        'Total Purchase Value':total_id})\n",
+    "Item_df_asc = item_df.sort_values(['Purchase Count'],ascending=False)\n",
+    "#format currency and two decimal places\n",
+    "pd.options.display.float_format= \"${:,.2f}\".format\n",
+    "Item_df_asc.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1241,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -1321,37 +1381,43 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "92      Final Critic                                             13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "82      Nirvana                                                   9   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "103     Singed Scalpel                                            8   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "92      Final Critic                                      $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "82      Nirvana                                           $4.90   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "103     Singed Scalpel                                    $4.35   \n",
+       "                                                      Item Price  \\\n",
+       "Item ID Item Name                                                  \n",
+       "92      Final Critic                                       $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm       $4.23   \n",
+       "82      Nirvana                                            $4.90   \n",
+       "145     Fiery Glass Crusader                               $4.58   \n",
+       "103     Singed Scalpel                                     $4.35   \n",
        "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "82      Nirvana                                                    $44.10  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "103     Singed Scalpel                                             $34.80  "
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "92      Final Critic                                                $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                $50.76  \n",
+       "82      Nirvana                                                     $44.10  \n",
+       "145     Fiery Glass Crusader                                        $41.22  \n",
+       "103     Singed Scalpel                                              $34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Sort by tota purchase value\n",
+    "Item_df_purchase = item_df.sort_values(['Total Purchase Value'],ascending=False)\n",
+    "#format currency and two decimal places\n",
+    "pd.options.display.float_format= \"${:,.2f}\".format\n",
+    "Item_df_purchase.head()"
+   ]
   }
  ],
  "metadata": {
