--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -1418,6 +1418,25 @@
     "pd.options.display.float_format= \"${:,.2f}\".format\n",
     "Item_df_purchase.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the displayed data on gender demographics,there is a significantly high amount of Males that purchase items to enhance their playing experience.\n",
+    "Males also make more frequent amount of purchases, however when considering average price, females and other genders have spent more than males. This means the average value of each purchase made by your females and other(s) will often compare that to the average number of units per transaction. The average amount spent for the product or service is greater than the unit amount purchased. For males, they purchase more units but on average spend less for purchasing price for the product or service.\n",
+    "\n",
+    "On age demographics, the highest percentage of players are from 15-19 with an estimated 19% and 20-24 with an estimated 45%.The age demographic that this game attracts is between the aged of 15-24. As for purchasing based on age, the age group that spends the most amount is ages 20-24, comming in second is ages ranging from 15-19. \n",
+    "\n",
+    "The item that the game offers that is most profitable and is purchased most frequntly is 'Final Critic' which has an item price of 4.61 and aa total purchase value of 59.99. On average, all gendera spend below 4.61 margin but the average spending is close to that price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
